# python_django

./: .dockerignore  .env  Dockerfile  devices.csv  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/: db.sqlite3  demo.py  log.txt  queries.sql  requirements.txt  shopapp-fixtures.json  timeweb  timeweb.pub
mysite/blogapp/: models.py  sitemap.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py  0002_remove_article_content_remove_article_pub_date_and_more.py  0003_rename_budy_article_body.py  0004_remove_article_author_remove_article_category_and_more.py
mysite/myapiapp/: urls.py  views.py
mysite/myauth/: __init__.py  forms.py  models.py  tests.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar_profile_email_profile_first_name_and_more.py  0003_remove_profile_avatar_profile_image_and_more.py  0004_alter_profile_image_alter_profile_table.py  0005_alter_profile_image.py
mysite/mysite/: settings.py  urls.py
mysite/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
mysite/shopapp/: admin.py  admin_mixins.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: products-fixtures.json
mysite/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_rename_discription_product_description.py  0008_alter_product_options.py  0009_order_receipt.py  0010_product_preview.py  0011_productimage.py  (+2 more)
(+37 files in other folders)
